--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
         <link rel="stylesheet" type="text/css" href="assets/font-awesome/css/font-awesome.min.css">
         <link rel="stylesheet" type="text/css" href="assets/bootstrap/dist/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="assets/select2/dist/css/select2.min.css">
+        <link rel="stylesheet" type="text/css" href="assets/select2-bootstrap-theme/dist/select2-bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="assets/sweetalert2/dist/sweetalert2.min.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i">
         <link rel="stylesheet" type="text/css" href="css/style.css">
         <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
@@ -19,18 +21,69 @@
         <div class="container mt-5">
             <div id="nav" class="mb-3">
                 <div class="row">
-                    <div class="col-lg-2 mobile-b-3">
-                        <button class="btn btn-primary btn-block text-center"><i class="fa fa-plus mr-2"></i>Add Playlist</button>
+                    <div class="col-lg-3 mobile-b-3">
+                        <button class="btn btn-primary btn-block text-center" data-toggle="modal" data-target=".bd-example-modal-lg"><i class="fa fa-plus mr-2"></i>Add New Playlist</button>
                     </div>
-                    <div class="col-lg-4">
+                    <div class="col-lg-3">
                     </div>
-                    <div class="col-lg-2 mobile-b-3">
+                    <div class="col-lg-3 mobile-b-3">
                         <button class="btn btn-danger btn-block text-center"><i class="fa fa-heart mr-2"></i>Favorites</button>
                     </div>
-                    <div class="col-lg-4 mobile-b-3">
+                    <div class="col-lg-3 mobile-b-3">
                         <div class="input-group">
                             <span class="input-group-addon"><i class="fa fa-search"></i></span>
                             <input type="text" class="form-control" placeholder="Search">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal fade bd-example-modal-lg" tabindex="-1" id="addPlaylistModal" role="dialog" aria-hidden="true">
+                <div class="modal-dialog modal-lg">
+                    <div class="modal-content container">
+                        <div class="jumbotron mt-3 p-2 text-center text-light bg-secondary">
+                            <h3>Add New Playlist</h3>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-lg-6">
+                                <input type="text" class="form-control" name="addPlaylistName" id="addPlaylistName" placeholder="Playlist Name" autofocus>
+                            </div>
+                            <div class="col-lg-6">
+                                <input type="file" class="custom-b4-file" name="addPlaylistImage" id="addPlaylistImage">
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-lg-12">
+                                <select class="js-example-basic-single form-control" id="addPlaylistGenre" name="genre">
+                                    <option></option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="jumbotron p-2 text-center text-light bg-secondary">
+                            <h3>Add Playlist Songs</h3>
+                        </div>
+                        <div class="mb-5" id="addSongsToPlaylistForm">
+                            <div class="row add-new-song-col">
+                                <div class="col-lg-6 mb-3">
+                                    <input type="text" class="form-control" name="addPlaylistSongs[]" placeholder="Song Name">
+                                </div>
+                                <div class="col-lg-5 mb-3">
+                                    <input type="file" class="custom-b4-file" name="addPlaylistAudios[]">
+                                </div>
+                                <div class="col-lg-1 text-center">
+                                    <i class="fa fa-minus-circle remove-song"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row mb-5">
+                            <div class="col-lg-4">
+                                <button id="addMoreSongsInputs" class="btn btn-info btn-block"><i class="fa fa-plus mr-2"></i>Add Another Song</button>
+                            </div>
+                            <div class="col-lg-4">
+                                <button id="addMoreSongsFromPlaylists" class="btn btn-dark btn-block"><i class="fa fa-plus mr-2"></i>Add Song From Playlists</button>
+                            </div>
+                            <div class="col-lg-4">
+                                <button id="addPlaylistFinally" class="btn btn-success btn-block">Submit</button>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -79,9 +132,12 @@
         <script src="assets/popper.js/dist/umd/popper.min.js"></script>
         <script src="assets/bootstrap/dist/js/bootstrap.min.js"></script>
         <script src="assets/select2/dist/js/select2.min.js"></script>
+        <script src="assets/sweetalert2/dist/sweetalert2.min.js"></script>
         <script src="js/templates/player.template.js"></script>
         <script src="js/templates/playlist.template.js"></script>
+        <script src="js/templates/form.template.js"></script>
         <script src="js/controllers/audio.controller.js"></script>
+        <script src="js/controllers/request.controller.js"></script>
         <script src="js/app.js"></script>
     </body>
 </html>
