--- a/public/index.html
+++ b/public/index.html
@@ -37,54 +37,58 @@
                     </div>
                 </div>
             </div>
-            <div class="modal fade bd-example-modal-lg" tabindex="-1" id="addPlaylistModal" role="dialog" aria-hidden="true">
+            <div class="modal fade bd-example-modal-lg" tabindex="-1" id="playlistModal" role="dialog" aria-hidden="true">
                 <div class="modal-dialog modal-lg">
                     <div class="modal-content container">
-                        <div class="jumbotron mt-3 p-2 text-center text-light bg-secondary">
-                            <h3>Add New Playlist</h3>
-                        </div>
-                        <div class="row mb-3">
-                            <div class="col-lg-6">
-                                <input type="text" class="form-control" name="addPlaylistName" id="addPlaylistName" placeholder="Playlist Name" autofocus>
+                        <form id="playlistForm">
+                            <div class="jumbotron mt-3 p-2 text-center text-light bg-secondary">
+                                <h3>Add New Playlist</h3>
                             </div>
-                            <div class="col-lg-6">
-                                <input type="file" class="custom-b4-file" name="addPlaylistImage" id="addPlaylistImage">
+                            <div id="playlistMessage" class="d-none m-3">
                             </div>
-                        </div>
-                        <div class="row mb-3">
-                            <div class="col-lg-12">
-                                <select class="js-example-basic-single form-control" id="addPlaylistGenre" name="genre">
-                                    <option></option>
-                                </select>
-                            </div>
-                        </div>
-                        <div class="jumbotron p-2 text-center text-light bg-secondary">
-                            <h3>Add Playlist Songs</h3>
-                        </div>
-                        <div class="mb-5" id="addSongsToPlaylistForm">
-                            <div class="row add-new-song-col">
-                                <div class="col-lg-6 mb-3">
-                                    <input type="text" class="form-control" name="addPlaylistSongs[]" placeholder="Song Name">
+                            <div class="row mb-3">
+                                <div class="col-lg-6">
+                                    <input type="text" class="form-control" name="playlistName" id="playlistName" placeholder="Playlist Name" autofocus>
                                 </div>
-                                <div class="col-lg-5 mb-3">
-                                    <input type="file" class="custom-b4-file" name="addPlaylistAudios[]">
-                                </div>
-                                <div class="col-lg-1 text-center">
-                                    <i class="fa fa-minus-circle remove-song"></i>
+                                <div class="col-lg-6">
+                                    <input type="file" class="custom-b4-file" id="playlistAlbum">
                                 </div>
                             </div>
-                        </div>
-                        <div class="row mb-5">
-                            <div class="col-lg-4">
-                                <button id="addMoreSongsInputs" class="btn btn-info btn-block"><i class="fa fa-plus mr-2"></i>Add Another Song</button>
+                            <div class="row mb-3">
+                                <div class="col-lg-12">
+                                    <select class="js-example-basic-single form-control" id="genre" name="genre">
+                                        <option></option>
+                                    </select>
+                                </div>
                             </div>
-                            <div class="col-lg-4">
-                                <button id="addMoreSongsFromPlaylists" class="btn btn-dark btn-block"><i class="fa fa-plus mr-2"></i>Add Song From Playlists</button>
+                            <div class="jumbotron p-2 text-center text-light bg-secondary">
+                                <h3>Add Playlist Songs</h3>
                             </div>
-                            <div class="col-lg-4">
-                                <button id="addPlaylistFinally" class="btn btn-success btn-block">Submit</button>
+                            <div class="mb-5" id="addSongsToPlaylistForm">
+                                <div class="row add-new-song-col">
+                                    <div class="col-lg-6 mb-3">
+                                        <input type="text" class="form-control" name="songName" placeholder="Song Name">
+                                    </div>
+                                    <div class="col-lg-5 mb-3">
+                                        <input type="file" class="custom-b4-file songs">
+                                    </div>
+                                    <div class="col-lg-1 text-center">
+                                        <i class="fa fa-minus-circle remove-song"></i>
+                                    </div>
+                                </div>
                             </div>
-                        </div>
+                            <div class="row mb-5">
+                                <div class="col-lg-4">
+                                    <button id="addMoreSongsInputs" class="btn btn-info btn-block" type="button"><i class="fa fa-plus mr-2"></i>Add Another Song</button>
+                                </div>
+                                <div class="col-lg-4">
+                                    <button id="addMoreSongsFromPlaylists" class="btn btn-dark btn-block" type="button"><i class="fa fa-plus mr-2"></i>Add Song From Playlists</button>
+                                </div>
+                                <div class="col-lg-4">
+                                    <button id="setPlaylistFinally" class="btn btn-success btn-block" type="button">Submit</button>
+                                </div>
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div>
@@ -136,6 +140,7 @@
         <script src="js/templates/player.template.js"></script>
         <script src="js/templates/playlist.template.js"></script>
         <script src="js/templates/form.template.js"></script>
+        <script src="js/templates/message.template.js"></script>
         <script src="js/controllers/audio.controller.js"></script>
         <script src="js/controllers/request.controller.js"></script>
         <script src="js/app.js"></script>
