--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,7 @@ d8888b. db       .d8b.  db    db db      d888888b .d8888. d888888b
                         </div>
                         <form id="playlistForm">
                             <div class="jumbotron mt-3 p-2 text-center text-light bg-secondary">
-                                <h3 id="playlistFormTitle">Add New Playlist</h3>
+                                <h3 id="playlistFormTitle"></h3>
                             </div>
                             <div id="playlistMessage">
                             </div>
@@ -96,17 +96,6 @@ d8888b. db       .d8b.  db    db db      d888888b .d8888. d888888b
                                 <h3>Playlist Songs</h3>
                             </div>
                             <div class="mb-5" id="addSongsToPlaylistForm">
-                                <div class="row add-new-song-col">
-                                    <div class="col-lg-6 mb-3">
-                                        <input type="text" class="form-control" name="songName" placeholder="Song Name">
-                                    </div>
-                                    <div class="col-lg-5 mb-3">
-                                        <input type="file" class="custom-b4-file songs">
-                                    </div>
-                                    <div class="col-lg-1 text-center">
-                                        <i class="fa fa-minus-circle remove-song"></i>
-                                    </div>
-                                </div>
                             </div>
                             <div class="row mb-5">
                                 <div class="col-lg-4">
@@ -116,7 +105,6 @@ d8888b. db       .d8b.  db    db db      d888888b .d8888. d888888b
                                     <button id="addMoreSongsFromPlaylists" class="btn btn-dark btn-block" type="button"><i class="fa fa-plus mr-2"></i>Add Song From Playlists</button>
                                 </div>
                                 <div class="col-lg-4" id="colSetPlaylist">
-                                    <button id="setPlaylistFinally" class="btn btn-success btn-block" type="button">Submit</button>
                                 </div>
                             </div>
                         </form>
@@ -168,10 +156,12 @@ d8888b. db       .d8b.  db    db db      d888888b .d8888. d888888b
         <script src="assets/bootstrap/dist/js/bootstrap.min.js"></script>
         <script src="assets/select2/dist/js/select2.full.min.js"></script>
         <script src="assets/sweetalert2/dist/sweetalert2.min.js"></script>
+        <script src="js/globals/global.js"></script>
         <script src="js/templates/player.template.js"></script>
         <script src="js/templates/playlist.template.js"></script>
         <script src="js/templates/form.template.js"></script>
         <script src="js/templates/message.template.js"></script>
+        <script src="js/controllers/nav.controller.js"></script>
         <script src="js/controllers/form.controller.js"></script>
         <script src="js/controllers/audio.controller.js"></script>
         <script src="js/controllers/playlist.controller.js"></script>
