--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@ d8888b. db       .d8b.  db    db db      d888888b .d8888. d888888b
         <link rel="stylesheet" type="text/css" href="assets/select2-bootstrap-theme/dist/select2-bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="assets/sweetalert2/dist/sweetalert2.min.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i">
-        <link rel="stylesheet" type="text/css" href="css/main/style.css">
+        <link rel="stylesheet" type="text/css" href="css/main/styles.css">
         <link rel="stylesheet" type="text/css" href="css/main/loader.css">
         <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     </head>
